Fixed width of login fields, margin-top of footer on register page, jumbotron width of index on mobile.

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -17,3 +17,13 @@
 input {
     color: #000;
 }
+
+
+/* Mobile view (992px max width) */
+@media (max-width: 992px) {
+
+    .contentBg {
+        padding: 10px;
+    }
+
+}
